完成基本布局，细节尺寸需要提供具体数据实现

--- a/index.html
+++ b/index.html
@@ -9,24 +9,30 @@
 	<div class="container">
 		<div class="nav">
 			<div class="title center">
-				<ul class="list left">
-					<li>
 						<div class="logo"><img src="image/logo.png" class="logoImg"></div>
-					</li>
-					<li>
 						<div class="name"><p>东方金信数据资产管理平台</p></div>
-					</li>
-				</ul>
 				<ul class="list right">
-					<li><div class="option"><a href="">组织架构</a></div></li>
-					<li><div class="option"><a href="">数据架构</a></div></li>
-					<li><div class="option"><a href="">新闻</a></div></li>
-					<li><div class="option"><a href="">产品</a></div></li>
-					<li><div class="option"><a href="">首页</a></div></li>
+					<li class="option"><a href="javascript:">首页</a></li>
+					<li class="option"><a href="javascript:">产品</a></li>
+					<li class="option"><a href="javascript:">新闻</a></li>
+					<li class="option"><a href="javascript:">数据架构</a></li>
+					<li class="option"><a href="javascript:">组织架构</a></li>
+					<li class="letter"><a href="javascript:">
+						<img src="image/15.png"></a>
+						<div> 6</div>
+					</li>
+					<li class="whiteDot"><div></div></li>
 				</ul>
 			</div>
 		</div>
-		<div class="head"></div>
+		<div class="head">
+			<div class="headImg"></div>
+			<div class="dotBox">
+				<div class="dot"></div>
+				<div class="dot"></div>
+				<div class="dot"></div>
+			</div>
+		</div>
 		<div class="content">
 			<div class="box center">
 				<div class="pad">
