--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>东方金信数据资产管理平台</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="index.css">
 </head>
@@ -9,20 +9,27 @@
 	<div class="container">
 		<div class="nav">
 			<div class="title center">
-						<div class="logo"><img src="image/logo.png" class="logoImg"></div>
-						<div class="name"><p>东方金信数据资产管理平台</p></div>
-				<ul class="list right">
-					<li class="option"><a href="javascript:">首页</a></li>
-					<li class="option"><a href="javascript:">产品</a></li>
-					<li class="option"><a href="javascript:">新闻</a></li>
-					<li class="option"><a href="javascript:">数据架构</a></li>
-					<li class="option"><a href="javascript:">组织架构</a></li>
-					<li class="letter"><a href="javascript:">
-						<img src="image/15.png"></a>
-						<div> 6</div>
-					</li>
-					<li class="whiteDot"><div></div></li>
-				</ul>
+				<span>
+					<span class="logo"><img src="image/logo.png" class="logoImg"></span>
+					<span class="name"><p>东方金信数据资产管理平台</p></span>	
+				</span>
+				<div class="list">
+						<ul class="right">
+								<li class="option"><a href="javascript:">首页</a></li>
+								<li class="option"><a href="javascript:">产品</a></li>
+								<li class="option"><a href="javascript:">新闻</a></li>
+								<li class="option"><a href="javascript:">数据架构</a></li>
+								<li class="option"><a href="javascript:">组织架构</a></li>
+						</ul>
+						<div class="letterBox">
+								<div class="letter">
+									<a><img src="image/15.png"></a>
+								</div>
+								<div class="whiteDot">
+									<div></div>
+								</div>
+						</div>
+				</div>
 			</div>
 		</div>
 		<div class="head">
@@ -41,8 +48,8 @@
 						<div class="logoBox"><img src="image/1.png" class="itemLogo"></div>
 						<div class="text">数据资源目录数据资源目录数据资源目录数据资源目录数据资源目录数据资源目录</div>
 						<div class="btn">
-							<div class="btnBox"><a href="">点击进入</a></div>
-							<div class="btnBox"><a href="">查看详情</a></div>
+							<div class="btnBox"><a href="javascript:">点击进入</a></div>
+							<div class="btnBox"><a href="javascript:">查看详情</a></div>
 						</div>
 					</div>
 					<div class="item">
@@ -50,8 +57,8 @@
 						<div class="logoBox"><img src="image/2.png" class="itemLogo"></div>
 						<div class="text">数据资源目录数据资源目录数据资源目录数据资源目录数据资源目录数据资源目录</div>
 						<div class="btn">
-							<div class="btnBox"><a href="">点击进入</a></div>
-							<div class="btnBox"><a href="">查看详情</a></div>
+							<div class="btnBox"><a href="javascript:">点击进入</a></div>
+							<div class="btnBox"><a href="javascript:">查看详情</a></div>
 						</div>
 					</div>
 					<div class="item">
@@ -59,8 +66,8 @@
 						<div class="logoBox"><img src="image/3.png" class="itemLogo"></div>
 						<div class="text">数据资源目录数据资源目录数据资源目录数据资源目录数据资源目录数据资源目录</div>
 						<div class="btn">
-							<div class="btnBox"><a href="">点击进入</a></div>
-							<div class="btnBox"><a href="">查看详情</a></div>
+							<div class="btnBox"><a href="javascript:">点击进入</a></div>
+							<div class="btnBox"><a href="javascript:">查看详情</a></div>
 						</div>
 					</div>
 					<div class="item">
@@ -68,8 +75,8 @@
 						<div class="logoBox"><img src="image/4.png" class="itemLogo"></div>
 						<div class="text">数据资源目录数据资源目录数据资源目录数据资源目录数据资源目录数据资源目录</div>
 						<div class="btn">
-							<div class="btnBox"><a href="">点击进入</a></div>
-							<div class="btnBox"><a href="">查看详情</a></div>
+							<div class="btnBox"><a href="javascript:">点击进入</a></div>
+							<div class="btnBox"><a href="javascript:">查看详情</a></div>
 						</div>
 					</div>
 					<div class="item">
@@ -77,8 +84,8 @@
 						<div class="logoBox"><img src="image/5.png" class="itemLogo"></div>
 						<div class="text">数据资源目录数据资源目录数据资源目录数据资源目录数据资源目录数据资源目录</div>
 						<div class="btn">
-							<div class="btnBox"><a href="">点击进入</a></div>
-							<div class="btnBox"><a href="">查看详情</a></div>
+							<div class="btnBox"><a href="javascript:">点击进入</a></div>
+							<div class="btnBox"><a href="javascript:">查看详情</a></div>
 						</div>
 					</div>
 					<div class="item">
@@ -86,8 +93,8 @@
 						<div class="logoBox"><img src="image/6.png" class="itemLogo"></div>
 						<div class="text">数据资源目录数据资源目录数据资源目录数据资源目录数据资源目录数据资源目录</div>
 						<div class="btn">
-							<div class="btnBox"><a href="">点击进入</a></div>
-							<div class="btnBox"><a href="">查看详情</a></div>
+							<div class="btnBox"><a href="javascript:">点击进入</a></div>
+							<div class="btnBox"><a href="javascript:">查看详情</a></div>
 						</div>
 					</div>
 					<div class="item">
@@ -95,8 +102,8 @@
 						<div class="logoBox"><img src="image/7.png" class="itemLogo"></div>
 						<div class="text">数据资源目录数据资源目录数据资源目录数据资源目录数据资源目录数据资源目录</div>
 						<div class="btn">
-							<div class="btnBox"><a href="">点击进入</a></div>
-							<div class="btnBox"><a href="">查看详情</a></div>
+							<div class="btnBox"><a href="javascript:">点击进入</a></div>
+							<div class="btnBox"><a href="javascript:">查看详情</a></div>
 						</div>
 					</div>
 					<div class="item">
@@ -104,8 +111,8 @@
 						<div class="logoBox"><img src="image/8.png" class="itemLogo"></div>
 						<div class="text">数据资源目录数据资源目录数据资源目录数据资源目录数据资源目录数据资源目录</div>
 						<div class="btn">
-							<div class="btnBox"><a href="">点击进入</a></div>
-							<div class="btnBox"><a href="">查看详情</a></div>
+							<div class="btnBox"><a href="javascript:">点击进入</a></div>
+							<div class="btnBox"><a href="javascript:">查看详情</a></div>
 						</div>
 					</div>
 					<div class="item">
@@ -113,8 +120,8 @@
 						<div class="logoBox"><img src="image/9.png" class="itemLogo"></div>
 						<div class="text">数据资源目录数据资源目录数据资源目录数据资源目录数据资源目录数据资源目录</div>
 						<div class="btn">
-							<div class="btnBox"><a href="">点击进入</a></div>
-							<div class="btnBox"><a href="">查看详情</a></div>
+							<div class="btnBox"><a href="javascript:">点击进入</a></div>
+							<div class="btnBox"><a href="javascript:">查看详情</a></div>
 						</div>
 					</div>
 					<div class="item">
@@ -122,8 +129,8 @@
 						<div class="logoBox"><img src="image/10.png" class="itemLogo"></div>
 						<div class="text">数据资源目录数据资源目录数据资源目录数据资源目录数据资源目录数据资源目录</div>
 						<div class="btn">
-							<div class="btnBox"><a href="">点击进入</a></div>
-							<div class="btnBox"><a href="">查看详情</a></div>
+							<div class="btnBox"><a href="javascript:">点击进入</a></div>
+							<div class="btnBox"><a href="javascript:">查看详情</a></div>
 						</div>
 					</div>
 					<div class="item">
@@ -131,8 +138,8 @@
 						<div class="logoBox"><img src="image/11.png" class="itemLogo"></div>
 						<div class="text">数据资源目录数据资源目录数据资源目录数据资源目录数据资源目录数据资源目录</div>
 						<div class="btn">
-							<div class="btnBox"><a href="">点击进入</a></div>
-							<div class="btnBox"><a href="">查看详情</a></div>
+							<div class="btnBox"><a href="javascript:">点击进入</a></div>
+							<div class="btnBox"><a href="javascript:">查看详情</a></div>
 						</div>
 					</div>
 				</div>
