添加了信息提示的红色标记

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 						<div class="letterBox">
 								<div class="letter">
 									<a><img src="image/15.png"></a>
+									<div>6</div>
 								</div>
-								<div class="whiteDot">
-									<div></div>
+								<div class="login">
 								</div>
 						</div>
 				</div>
