实现了内容区每一个板块的悬停缩放特效

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
 				<div class="dot"></div>
 			</div>
 		</div>
+		<div class="mid">
+
+			</div>
 		<div class="content">
 			<div class="box center">
 				<div class="pad">
