完成了新版的数据资产首页

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<title>东方金信数据资产管理平台</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="index.css">
+	<link rel="stylesheet" href="swiper.min.css">
+    <link rel="stylesheet" href="animate.min.css">
 </head>
 <body>
 	<div class="container">
@@ -32,24 +34,73 @@
 				</div>
 			</div>
 		</div>
-		<div class="head">
-			<div class="headImg"></div>
-			<div class="dotBox">
-				<div class="dot"></div>
-				<div class="dot"></div>
-				<div class="dot"></div>
+		<div class="head swiper-container">
+			<div class="swiper-wrapper">
+				<div class="swiper-slide">
+          <div class="slideText">
+              <h1>数据资产价值持续增长：</h1>
+							<h2>估值</h2>
+							<div>
+								<span class="number">43,780,123</span><div class="unit">元</div>
+							</div>
+          </div>
+          <img src="image/14.png">
+        </div>
+				<div class="swiper-slide">
+            <div class="slideText">
+								<h1>数据资产价值持续增长：</h1>
+								<h2>估值</h2>
+								<div>
+									<span class="number">43,780,123</span><div class="unit">元</div>
+								</div>
+            </div>
+          <img src="image/16.jpeg">
+        </div>
+				<div class="swiper-slide">
+            <div class="slideText">
+								<h1>数据资产价值持续增长：</h1>
+								<h2>估值</h2>
+								<div>
+									<span class="number">43,780,123</span><div class="unit">元</div>
+								</div>
+            </div>
+          <img src="image/17.jpeg">
+        </div>
+			</div>
+			<div class="swiper-pagination">
 			</div>
 		</div>
 		<div class="mid">
-
+      <div class="midbox">
+				<p class="center">One Data,One Team</p>
+				<div class="midcontent">
+					<img src="image/Group223.png" class="center">
+					<div class="midleft">
+						<h3>一站式管理工具</h3>
+						<div class="midtext">一站式管理工具一站式管理工具一站式管理工具一站式管理工具一站式管理工具一站式管理工具一站式管理工具</div>
+					</div>
+					<div class="midright">
+						<h3>先进的方法论</h3>
+						<div class="midtext">一站式管理工具一站式管理工具一站式管理工具一站式管理工具一站式管理工具一站式管理工具一站式管理工具</div>
+					</div>
+					<img src="image/Group8.png" class="center">
+					<img src="image/Group120.png" class="center">
+					<div class="midleft">
+						<h3>资深的专家团队</h3>
+						<div class="midtext">一站式管理工具一站式管理工具一站式管理工具一站式管理工具一站式管理工具一站式管理工具一站式管理工具</div>
+					</div>
+				</div>
 			</div>
+		</div>
+		
 		<div class="content">
+			<p>Our Products</p>
 			<div class="box center">
 				<div class="pad">
 					<div class="item">
 						<div class="headline">数据资源目录</div>
 						<div class="logoBox"><img src="image/1.png" class="itemLogo"></div>
-						<div class="text">数据资源目录数据资源目录数据资源目录数据资源目录数据资源目录数据资源目录</div>
+						<div class="text">实现数据资产目录化管理，对数据进行编目形成核心元数据，实现数据资产标签，以结构化的形式对外提供......</div>
 						<div class="btn">
 							<div class="btnBox"><a href="javascript:">点击进入</a></div>
 							<div class="btnBox"><a href="javascript:">查看详情</a></div>
@@ -58,7 +109,7 @@
 					<div class="item">
 						<div class="headline">数据模型管理</div>
 						<div class="logoBox"><img src="image/2.png" class="itemLogo"></div>
-						<div class="text">数据资源目录数据资源目录数据资源目录数据资源目录数据资源目录数据资源目录</div>
+						<div class="text">实现数据模型管理，包括数据模型设计规范、流程，以及行业标准模型库，可视化实现关系型建模和NoSQL建模......</div>
 						<div class="btn">
 							<div class="btnBox"><a href="javascript:">点击进入</a></div>
 							<div class="btnBox"><a href="javascript:">查看详情</a></div>
@@ -67,7 +118,7 @@
 					<div class="item">
 						<div class="headline">元数据管理</div>
 						<div class="logoBox"><img src="image/3.png" class="itemLogo"></div>
-						<div class="text">数据资源目录数据资源目录数据资源目录数据资源目录数据资源目录数据资源目录</div>
+						<div class="text">数据资产的核心应用，管理和维护全部数据资产的业务、技术、管理等元数据进行数据的血缘分析、影响分析......</div>
 						<div class="btn">
 							<div class="btnBox"><a href="javascript:">点击进入</a></div>
 							<div class="btnBox"><a href="javascript:">查看详情</a></div>
@@ -76,7 +127,7 @@
 					<div class="item">
 						<div class="headline">数据标准管理</div>
 						<div class="logoBox"><img src="image/4.png" class="itemLogo"></div>
-						<div class="text">数据资源目录数据资源目录数据资源目录数据资源目录数据资源目录数据资源目录</div>
+						<div class="text">数据资产的标准制定、发布和维护。支持业务和技术标准落地，包括数据建模、业务术语、业务编码，统计......</div>
 						<div class="btn">
 							<div class="btnBox"><a href="javascript:">点击进入</a></div>
 							<div class="btnBox"><a href="javascript:">查看详情</a></div>
@@ -85,7 +136,7 @@
 					<div class="item">
 						<div class="headline">数据质量管理</div>
 						<div class="logoBox"><img src="image/5.png" class="itemLogo"></div>
-						<div class="text">数据资源目录数据资源目录数据资源目录数据资源目录数据资源目录数据资源目录</div>
+						<div class="text">实现数据资产的质量定义、质量监控、跟踪优化流程，数据质量规则管理和发布，数据质量评估等工作。</div>
 						<div class="btn">
 							<div class="btnBox"><a href="javascript:">点击进入</a></div>
 							<div class="btnBox"><a href="javascript:">查看详情</a></div>
@@ -94,7 +145,7 @@
 					<div class="item">
 						<div class="headline">数据安全管理</div>
 						<div class="logoBox"><img src="image/6.png" class="itemLogo"></div>
-						<div class="text">数据资源目录数据资源目录数据资源目录数据资源目录数据资源目录数据资源目录</div>
+						<div class="text">数据安全定义、管理和监控，数据安全管理流程，数据权限审批管理，数据隐私和脱敏管理，数据安全设计。</div>
 						<div class="btn">
 							<div class="btnBox"><a href="javascript:">点击进入</a></div>
 							<div class="btnBox"><a href="javascript:">查看详情</a></div>
@@ -103,7 +154,7 @@
 					<div class="item">
 						<div class="headline">数据生命周期管理</div>
 						<div class="logoBox"><img src="image/7.png" class="itemLogo"></div>
-						<div class="text">数据资源目录数据资源目录数据资源目录数据资源目录数据资源目录数据资源目录</div>
+						<div class="text">管理数据的存储周期制度和流程，区分热数据和冷数据，实现数据的在线、近线、离线、销毁的自动化管理。</div>
 						<div class="btn">
 							<div class="btnBox"><a href="javascript:">点击进入</a></div>
 							<div class="btnBox"><a href="javascript:">查看详情</a></div>
@@ -112,7 +163,7 @@
 					<div class="item">
 						<div class="headline">数据产品工厂</div>
 						<div class="logoBox"><img src="image/8.png" class="itemLogo"></div>
-						<div class="text">数据资源目录数据资源目录数据资源目录数据资源目录数据资源目录数据资源目录</div>
+						<div class="text">计算数据成本、评估数据价值，组装数据产品，实现数据资产的价值评估，提供数据交易的核算基础。</div>
 						<div class="btn">
 							<div class="btnBox"><a href="javascript:">点击进入</a></div>
 							<div class="btnBox"><a href="javascript:">查看详情</a></div>
@@ -121,7 +172,7 @@
 					<div class="item">
 						<div class="headline">外部数据管理</div>
 						<div class="logoBox"><img src="image/9.png" class="itemLogo"></div>
-						<div class="text">数据资源目录数据资源目录数据资源目录数据资源目录数据资源目录数据资源目录</div>
+						<div class="text">实现外部数据的采集、归类、管理，可实现从数据报送到网络爬取等多种类型的外部数据应用场景。</div>
 						<div class="btn">
 							<div class="btnBox"><a href="javascript:">点击进入</a></div>
 							<div class="btnBox"><a href="javascript:">查看详情</a></div>
@@ -130,7 +181,7 @@
 					<div class="item">
 						<div class="headline">数据开发平台</div>
 						<div class="logoBox"><img src="image/10.png" class="itemLogo"></div>
-						<div class="text">数据资源目录数据资源目录数据资源目录数据资源目录数据资源目录数据资源目录</div>
+						<div class="text">一站式的数据开发工作台，可视化的实现数据的抽取、加载、转换，数据建模，质量清洗等数据开发工作。</div>
 						<div class="btn">
 							<div class="btnBox"><a href="javascript:">点击进入</a></div>
 							<div class="btnBox"><a href="javascript:">查看详情</a></div>
@@ -139,7 +190,7 @@
 					<div class="item">
 						<div class="headline">BI平台</div>
 						<div class="logoBox"><img src="image/11.png" class="itemLogo"></div>
-						<div class="text">数据资源目录数据资源目录数据资源目录数据资源目录数据资源目录数据资源目录</div>
+						<div class="text">一站式的仪表盘和报表工作台，可视化的数据分析，快速的数据门户、领导仪表盘等应用构建。</div>
 						<div class="btn">
 							<div class="btnBox"><a href="javascript:">点击进入</a></div>
 							<div class="btnBox"><a href="javascript:">查看详情</a></div>
@@ -158,5 +209,8 @@
 			</div>
 		</div>
 	</div>
+	<script src="swiper.min.js"></script>
+	<script src="swiper.animate1.0.3.min.js"></script>
+	<script src="index.js"></script>
 </body>
 </html>
