修改了在屏幕尺寸在2000px以上时右边出现白边的bug，调整了轮播图分页器的尺寸和位置。

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 									<span class="number">43,780,123</span><div class="unit">元</div>
 								</div>
             </div>
-          <img src="image/16.jpeg">
+          <img src="image/16.png">
         </div>
 				<div class="swiper-slide">
             <div class="slideText">
@@ -64,7 +64,7 @@
 									<span class="number">43,780,123</span><div class="unit">元</div>
 								</div>
             </div>
-          <img src="image/17.jpeg">
+          <img src="image/17.png">
         </div>
 			</div>
 			<div class="swiper-pagination">
