完成了文案数字与轮播图的对应

--- a/index.html
+++ b/index.html
@@ -38,34 +38,34 @@
 			<div class="swiper-wrapper">
 				<div class="swiper-slide">
           <div class="slideText">
-              <h1>数据资产价值持续增长：</h1>
+              <h1>数据资产价值持续增长</h1>
 							<h2>估值</h2>
 							<div>
-								<span class="number">43,780,123</span><div class="unit">元</div>
+								<span data-number='43780123' class="number"></span><div class="unit">元</div>
 							</div>
           </div>
-          <img src="image/14.png">
+          <img src="image/14.jpeg">
         </div>
 				<div class="swiper-slide">
             <div class="slideText">
-								<h1>数据资产价值持续增长：</h1>
-								<h2>估值</h2>
+								<h1>数据资产持续丰富，目前已经有167个数据来源</h1>
+								<!-- <h2>估值</h2> -->
 								<div>
-									<span class="number">43,780,123</span><div class="unit">元</div>
+									<span data-number='450T' class="number"></span><div class="unit">数据</div>
 								</div>
             </div>
-          <img src="image/16.png">
+          <img src="image/16.jpeg">
         </div>
 				<div class="swiper-slide">
             <div class="slideText">
-								<h1>数据资产价值持续增长：</h1>
-								<h2>估值</h2>
-								<div>
-									<span class="number">43,780,123</span><div class="unit">元</div>
+								<h1>数据资产支撑的内外部应用</h1>
+								<!-- <h2>估值</h2> -->
+								<div class="roll">
+									<span data-number='65' class="number"></span><div class="unit">个</div>
 								</div>
             </div>
-          <img src="image/17.png">
-        </div>
+          <img src="image/17.jpeg">
+				</div>
 			</div>
 			<div class="swiper-pagination">
 			</div>
@@ -209,6 +209,7 @@
 			</div>
 		</div>
 	</div>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/16.3.5/Tween.min.js"></script>
 	<script src="swiper.min.js"></script>
 	<script src="swiper.animate1.0.3.min.js"></script>
 	<script src="index.js"></script>
