完成了数字滚动效果

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 								<h1>数据资产持续丰富，目前已经有167个数据来源</h1>
 								<!-- <h2>估值</h2> -->
 								<div>
-									<span data-number='450T' class="number"></span><div class="unit">数据</div>
+									<span data-number='450' class="number"></span><div class="numberUnit">T</div><div class="unit">数据</div>
 								</div>
             </div>
           <img src="image/16.jpeg">
